--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@matejmazur/react-katex": "^3.1.3",
     "@mdx-js/rollup": "^2.0.0-rc.1",
+    "katex": "^0.15.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
